clusters/home/apps/linkwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
spec:
  selector:
    matchLabels:
      app: linkwarden
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      containers:
      - name: linkwarden
        imagePullPolicy: IfNotPresent
        image: ghcr.io/linkwarden/linkwarden:v2.3.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
        volumeMounts:
        - name: linkwarden
          mountPath: /data/data
      volumes:
        - name: linkwarden
          persistentVolumeClaim:
            claimName: linkwarden
