clusters/home/apps/linkwarden/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
spec:
  selector:
    app: linkwarden
  ports:
  - port: 3000
    targetPort: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  labels:
    name: linkwarden
  annotations:
    kubernetes.io/ingress.class: nginx
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Open-source collaborative bookmark manage
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: linkwarden
    gethomepage.dev/name: Linkwarden
    gethomepage.dev/weight: "1"
spec:
  rules:
  - host: linkwarden.pacholoamit.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: linkwarden
            port: 
              number: 3000
